change hive jvm gc parnew+Serialold to G1